[package]
name = "treeedbgen-souffle-solidity"
version = "0.1.0"
edition = "2021"
description = "Generate Soufflé types and relations from the solidity tree-sitter grammar"
keywords = ["datalog", "solidity", "parsing", "souffle"]
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "../README.md"
homepage = "https://github.com/langston-barrett/treeedb"
repository = "https://github.com/langston-barrett/treeedb"

[dependencies]
anyhow = "1"
treeedbgen-souffle = { version = "0.1.0", path = "../treeedbgen-souffle", features = ["cli"] }
tree-sitter-solidity = { git = "https://github.com/0xalpharush/tree-sitter-solidity", rev = "3e26757" }


[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3"